Revision history for Email-MIME-Kit

{{$NEXT}}

2.101960  2010-07-15 09:04:53 America/New_York
          improve the chances of correctly bracketing message-ids
          avoid re-setting already set message-ids

2.093070  2009-11-03
          improve handling of header and body encoding

2.091920  2009-07-10
          add missing (test) prereq Test::Deep
          fix cid_for callbacks to exclude the content-id brackets (RT 47787)
            (reported by Jason Taylor; thanks!)

2.091410  2009-05-20
          documentation improvements
          now packaged by Dist::Zilla

2.004     2009-04-09
          fix bug in standard assembler that prevented renderer override

2.003     2009-03-12
          fix bug in subassembly creation; assembler couldn't be parameterized
          move the TestRenderer out of t/lib to let other dists rely on it

2.002     2009-03-09
          make it possible to specify an alternate kit_reader in the manifest
          fix some bugs in core component initialization

2.001     2009-01-28
          alternatives now get a default charset of utf-8 (needs more work)
          fix autoencode tests for pre-perl5-8.009's qr{}m

2.000     2009-01-16
          begin total rewrite

0.010_02  2006-03-22
          Refactor into ::Component and ::Component::Data
          Make it possible to change INCLUDE_PATH for Renderer::TT.

0.010     2006-03-06
          First version, released on an unsuspecting internal network.
